syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ValueRequest {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message ResponseValue {
  int64 value = 1;
}

service RemoteService {
  rpc streamValues(ValueRequest) returns (stream ResponseValue);
}